# VeloraPlan

./: .gitignore  COMPREHENSIVE_FRAMEWORK.md  COST_OPTIMIZATION.md  OUTPUT_IMPROVEMENTS.md  README.md  SETUP.md  convert_gantt.py  create_env.py  pyproject.toml  requirements.txt  run_crew.py  test_gantt.py  test_intake.json  test_openai.py  test_output.py
config/: project_config.yaml
outputs/: crew_output_20250629_183914.md  crew_output_20250629_184602.md  crew_output_20250629_184728.md  detailed_project_plan_20250629_183915.md  detailed_project_plan_20250629_184728.md  detailed_project_plan_20250630_everbright.md  gantt_chart_20250629_183914.md  gantt_chart_20250629_183915.md  gantt_chart_20250629_184602.md  gantt_chart_20250629_184728.md  gantt_chart_20250630_everbright.md  prioritization_analysis_20250629_183915.md  prioritization_analysis_20250629_184602.md  prioritization_analysis_20250629_184728.md  prioritization_analysis_20250630_everbright.md  project_charter_20250629_183915.md  project_charter_20250629_184602.md  project_charter_20250629_184728.md  project_charter_20250630_everbright.md  resource_allocation_20250629_183915.md  resource_allocation_20250629_184602.md  resource_allocation_20250629_184728.md  resource_allocation_20250630_everbright.md  risk_assessment_20250629_183915.md  risk_assessment_20250629_184602.md  risk_assessment_20250629_184728.md  risk_assessment_20250630_everbright.md
src/veloraplan/: crew.py  extract_outputs.py  main.py  models.py  project_loader.py
src/veloraplan/config/: agents.yaml  tasks.yaml
(+1 files in other folders)
