[project]
name = "veloraplan"
version = "0.1.0"
description = "veloraplan using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0",
    "openai>=1.0.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "python-dotenv>=1.0.0",
]

[project.scripts]
veloraplan = "veloraplan.main:run"
run_crew = "veloraplan.main:run"
train = "veloraplan.main:train"
replay = "veloraplan.main:replay"
test = "veloraplan.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
